Change package name in composer.json to just "gathercontent/config"

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gathercontent/config-value-object",
+    "name": "gatherpackages/config",
     "description": "Validate item config for GatherContent",
     "authors": [
         {
