--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,11 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "beberlei/assert": "2.3"
+        "php": ">=7.3",
+        "beberlei/assert": "^3.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*",
+        "phpunit/phpunit": "9.*",
         "squizlabs/php_codesniffer": "1.*"
     },
     "autoload": {
